# FCARES-vRAN

./: .gitignore  CMakeLists.txt  HCS_update.md  freq_test_core5.c  gnb.sa.band78.fr1.273PRB.oxgrf.conf  ldpc_analyze.py  session-4-17-RB-SCAN.md  session-ses_2697.md
automation/: README.md  USAGE.md  config.batch.example.json  config.example.json  run_batch.py  run_test.py
bpf_scripts/: sched_lat.bt
cmake_targets/: build.sh  build_oai  run_gNB.sh
co_workload/: co_workload.c  controller  shared.h
executables/: cw_stall_probe.h  lte-ru.c  lte-softmodem.h  lte-uesoftmodem.c  nr-gnb.c  nr-ru.c  nr-softmodem-common.h  nr-softmodem.c  nr-softmodem.h  nr-uesoftmodem.c  nr-uesoftmodem.h  softmodem-common.c  softmodem-common.h
python_scripts/: FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README_decode_analyzer.md  USAGE_EXAMPLES.md  XLIM_FEATURE.md  apply_task_work_state_model.py  bak_inventory_for_integration.md  bandwidth_analyze.py  co_workload_test_dataAnalyzer.py  decode_analysis.html  decode_latency_analyzer.py  e2_state_independence.py  export_fft_classifier_to_c.py  fft_feature_moment_experiment.py  fill_budget_nulls.py  frame_autocorrelation_analyzer.py  hcs_backlog_audit.py  infer_state_from_task_work.py  ipc_baseline_eval.py  motivation_figures.py  move_folders.py  plot_decode_cost_violin.py  plot_motivation_cache_sweep.py  plot_motivation_violin_from_log.py  predict_fft_latency_state.py  pusch_not_detected_threshold_analyzer.py  pusch_scheduled_backlog_threshold_analyzer.py  (+14 more)
radio/OXGRF/: CMakeLists.txt  oxgrf_lib.c  oxgrf_lib.h  rf_helper.h
(+1056 files in other folders)
